Fix issue with Commands/Endpoints
Basic controls tested and now working

--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "name": "ff-api",
   "version": "1.0.0",
+  "description": "FlashForge 3D Printer API for Node.js",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc",
     "prepare": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsx src/test.ts"
   },
-  "keywords": [
-    "flashforge",
-    "3d-printer",
-    "api"
-  ],
+  "keywords": ["flashforge", "3d-printer", "api"],
   "author": "GhostTypes",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@types/axios": "^0.9.36",
     "@types/node": "^22.14.0",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "tsx": "^4.0.0"
   },
   "dependencies": {
     "axios": "^1.8.4",
