--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ff-api",
+  "name": "@ghosttypes/ff-api",
   "version": "1.0.0",
   "description": "FlashForge 3D Printer API for Node.js",
   "main": "dist/index.js",
@@ -24,5 +24,12 @@
   "dependencies": {
     "axios": "^1.8.4",
     "form-data": "^4.0.0"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ghosttypes/ff-5mp-api-ts.git"
   }
 }
