--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,7 +20,7 @@ jobs:
           scope: '@${{ github.repository_owner }}'
       
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       
       - name: Build
         run: npm run build
@@ -36,3 +36,15 @@ jobs:
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Report error details if failed
+        if: failure()
+        run: |
+          echo "::error::Package publish failed. Please check authentication and configuration."
+          echo "::group::NPM Config"
+          npm config list
+          echo "::endgroup::"
+          echo "::group::Repository Info"
+          echo "Owner: ${{ github.repository_owner }}"
+          echo "Repo: ${{ github.repository }}"
+          echo "::endgroup::"
