--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "test": "vitest",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest --coverage",
-    "docs:check": "go run scripts/check-fileoverview.go"
+    "docs:check": "go run scripts/check-fileoverview.go",
+    "lint": "biome lint .",
+    "format": "biome format --write .",
+    "check": "biome check --write .",
+    "ci": "biome ci ."
   },
   "keywords": [
     "flashforge",
@@ -23,6 +27,7 @@
   "author": "GhostTypes",
   "license": "ISC",
   "devDependencies": {
+    "@biomejs/biome": "2.3.14",
     "@types/axios": "^0.9.36",
     "@types/node": "^22.14.0",
     "@vitest/coverage-v8": "^4.0.18",
